--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
       <div class="back"></div>
       <div class="flap" aria-hidden="false"></div>
       <div class="letter" aria-hidden="true">
-        <p>id="letter" aria-hidden="true">
-        <p>
+        <p>id="letter" aria-hidden="true"<p>
           Dear Shringarika 💖,<br><br>
           Happy Birthday my constant, my person, my forever bestie ✨<br><br>
           9th class se lekar aaj tak — hum saath hi chal rahe hain. School ke wo din, choti‑choti baatein, hasi, fights, patch‑ups… aur aaj hum college ke 2nd year tak pahunch gaye 🫶<br><br>
@@ -220,3 +219,4 @@
   </script>
 </body>
 </html>
+
